# dynamics365crm-python

./: .gitignore  README.md  pyproject.toml  setup.py
dynamics365crm/: client.py  test.py
test/: test_client.py
